3.service-manifest/blue-green/vote-dog-cat/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb
  namespace: vote-dog-cat-bg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamodb
  template:
    metadata:
      labels:
        app: dynamodb
    spec:
      containers:
      - name: dynamodb
        image: amazon/dynamodb-local
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
      restartPolicy: Always
