3.service-manifest/blue-green/vote-dog-cat/base/rollout.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: appserver
  namespace: vote-dog-cat-bg
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: appserver
  template:
    metadata:
      labels:
        app: appserver
    spec:
      containers:
      - name: appserver
        image: duynamvnn1208/appserver:v1
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
      restartPolicy: Always
  strategy:
    blueGreen: 
      activeService: appserver-active
      previewService: appserver-preview
      autoPromotionEnabled: false
