3.service-manifest/blue-green/vote-dog-cat/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dynamodb
  name: dynamodb
  namespace: vote-dog-cat-bg
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    app: dynamodb

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appserver
  name: appserver-active
  namespace: vote-dog-cat-bg
spec:
  type: NodePort
  selector:
    app: appserver
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: appserver
  name: appserver-preview
  namespace: vote-dog-cat-bg
spec:
  type: NodePort
  selector:
    app: appserver
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8080
